--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="inner">
                   <h3>53</h3>
 
-                  <p>Pendaftar Tervirifikasi</p>
+                  <p>Pendaftar Lolos</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-stats-bars"></i>
@@ -375,7 +375,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td>Budi</td>
                         <td>SMKN 1 Wonosari</td>
                         <td>Nilai Raport</td>
-                        <td><span class="badge bg-success w-100">Terverifikasi</span></td>
+                        <td><span class="badge bg-success w-100">Lolos</span></td>
                       </tr>
                       <tr>
                         <td>2.</td>
@@ -383,7 +383,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <td>Joni</td>
                         <td>SMKN 2 Sleman</td>
                         <td>Seleksi Mandiri</td>
-                        <td><span class="badge bg-warning w-100">Menunggu Verifikasi</span></td>
+                        <td><span class="badge bg-warning w-100">Proses</span></td>
                       </tr>
                     </tbody>
                   </table>
