--- a/tambah_pendaftar.html
+++ b/tambah_pendaftar.html
@@ -618,9 +618,9 @@
                                                     Silahkan Upload Bukti Transfer Pendaftaran</b>
                                                 </h3>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-12">
                                                 <label for="transfer" class="form-label">Bukti Tranfer</label>
-                                                <input type="text" class="form-control" id="transfer">
+                                                <input type="file" class="form-control" id="transfer">
                                             </div>
 
                                             <div class="col-12 mt-4">
